AG-49258 Fixed shadow at the bottom of the element picker
Merge in EXTENSIONS/assistant from fix/AG-49258 to master

Squashed commit of the following:

commit 995e185852fb4a9d98817323f9108282ec0502bd
Author: Anatolii Khmarskii <a.khmarskii@adguard.com>
Date:   Tue Jan 27 14:10:36 2026 +0300

    AG-49258 Remove version date

commit 144b1d41a253e3955ea034fb34a835c618719e56
Author: Anatolii Khmarskii <a.khmarskii@adguard.com>
Date:   Tue Jan 27 14:10:11 2026 +0300

    Revert "AG-49258 Add temporary fix for QA"
    
    This reverts commit df016a6dcbf23c69cb4af0eae32fb4d398cb4a97.

commit df016a6dcbf23c69cb4af0eae32fb4d398cb4a97
Author: Anatolii Khmarskii <a.khmarskii@adguard.com>
Date:   Fri Jan 23 12:23:23 2026 +0300

    AG-49258 Add temporary fix for QA

commit 5e556003b59be35040f997bf12bac4f0ee4019a0
Author: Anatolii Khmarskii <a.khmarskii@adguard.com>
Date:   Thu Jan 22 14:40:51 2026 +0300

    AG-49258 Fixed shadow at the bottom of the element picker

--- a/src/styles/modules/layout.less
+++ b/src/styles/modules/layout.less
@@ -2,6 +2,11 @@
 
 .main {
     position: relative;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    // To adjust for different locales text length
+    justify-content: space-evenly;
 
     &--roboto {
         font-family: "Roboto", "Open Sans", Arial, sans-serif;
